--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,11 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<header>
+  <h1>BancoApp</h1>
+</header>
 
-{{outlet}}
+<main>
+  {{outlet}}
+</main>
+
+<footer>
+  &copy; {{unbound year}} Banco Associates Group Inc.
+</footer>
