--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,4 +1,3 @@
-@import ../../vendor/bourbon/app/assets/stylesheets/bourbon
+@import "../../vendor/bourbon/app/assets/stylesheets/bourbon"
 
-html, body
-  margin: 20px
+@import "views/application"
