WIP: Spiking out app.
App loading cover needs to be implemented.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,3 +1,6 @@
 @import "../../vendor/bourbon/app/assets/stylesheets/bourbon"
 
+@import "support/data"
 @import "views/application"
+@import "views/sidebar"
+@import "views/index"
