WIP: Accounts index.

--- a/app/styles/support/data.sass
+++ b/app/styles/support/data.sass
@@ -1,5 +1,7 @@
-$header-height: 68px
-$gutter: 30px
-$banco-orange: #e0461c
 $banco-dark-orange: #402d28
+$banco-orange: #e0461c
+$gutter: 30px
+$header-height: 68px
+$red: #dd2a2a
+$green: #40803f
 $sidebar-width: 222px
