--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,6 +1,8 @@
 @import "../../vendor/bourbon/app/assets/stylesheets/bourbon"
 
 @import "support/data"
+@import "components/fmt-dollars"
 @import "views/application"
 @import "views/sidebar"
 @import "views/index"
+@import "views/accounts/index"
