Adds loading screen.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,6 +1,7 @@
 @import "../../vendor/bourbon/app/assets/stylesheets/bourbon"
 
 @import "support/data"
+@import "support/keyframes"
 @import "components/fmt-dollars"
 @import "views/application"
 @import "views/sidebar"
