--- a/app/styles/views/application.sass
+++ b/app/styles/views/application.sass
@@ -15,6 +15,8 @@ body
       right: 0
       background: $banco-orange
       content: ""
+      opacity: 1
+      +transition(opacity ease-out 200ms)
     &:before
       position: fixed
       color: white
@@ -24,13 +26,18 @@ body
       left: 0
       right: 0
       content: " "
-      width: 150px
-      height: 150px
+      width: 25vh
+      height: 25vh
       margin: auto
       background-color: white
       border-radius: 100%
       -webkit-animation: scaleout 1.0s infinite ease-in-out
       animation: scaleout 1.0s infinite ease-in-out
+    &.reveal
+      &:after
+        opacity: 0
+      &:before
+        display: none
 
 body > div
   > header
