Safari needs height and width to display logo.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <header>
   <h1 class="logo">
     {{#link-to "index"}}
-      {{banco-wordmark height=31}}
+      {{banco-wordmark height=31 width=130}}
     {{/link-to}}
   </h1>
 
