Place thousandths separator in dollar amounts.

--- a/app/styles/components/fmt-dollars.sass
+++ b/app/styles/components/fmt-dollars.sass
@@ -10,8 +10,14 @@
     .symbol
       color: lighten($red, 15%)
 
+    .sep
+      color: lighten($red, 10%)
+
   &.pos
     color: $green
 
     .symbol
       color: lighten($green, 15%)
+
+    .sep
+      color: lighten($green, 10%)
