More work on accounts page.

--- a/app/styles/views/accounts/index.sass
+++ b/app/styles/views/accounts/index.sass
@@ -10,17 +10,19 @@ table.accounts-index
     vertical-align: middle
     height: $header-height
     border-bottom: 1px solid #ddd
+    background: white
 
   .account-info
     text-align: left
 
+    .label
+      font-weight: bold
+      font-size: 18px
+      line-height: 26px
+
     .details
       font-size: 14px
       color: #888
-
-      .label
-        font-size: 18px
-        line-height: 26px
 
       span
         &:after
