--- a/app/styles/views/application.sass
+++ b/app/styles/views/application.sass
@@ -98,14 +98,14 @@ body > div
 
     > header
       height: $header-height
-      line-height: $header-height - 5px
+      line-height: $header-height - 4px
       padding: 0 $gutter
-      background: lighten($banco-orange, 30%)
-      color: darken($banco-dark-orange, 10%)
+      background: lighten($banco-orange, 38%)
+      color: $banco-dark-orange
 
-      h1, h2
-        font-weight: 600
-        font-size: 20px
+      h1
+        font-weight: 400
+        font-size: 24px
 
   > footer
     position: fixed
