--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -4,7 +4,7 @@
       {{#link-to "index"}}Overview{{/link-to}}
     </li>
     <li>
-      {{#link-to "accounts.index"}}Accounts{{/link-to}}
+      {{#link-to "accounts"}}Accounts{{/link-to}}
     </li>
     {{!--
     <li>
