--- a/app/styles/views/application.sass
+++ b/app/styles/views/application.sass
@@ -13,13 +13,13 @@ body
       bottom: 0
       left: 0
       right: 0
-      background: $banco-orange
+      background: white
       content: ""
       opacity: 1
-      +transition(opacity ease-out 200ms)
+      +transition(opacity ease-out 300ms)
     &:before
       position: fixed
-      color: white
+      color: $banco-orange
       z-index: 999999
       top: 0
       bottom: 0
@@ -29,7 +29,7 @@ body
       width: 25vh
       height: 25vh
       margin: auto
-      background-color: white
+      background-color: $banco-orange
       border-radius: 100%
       -webkit-animation: scaleout 1.0s infinite ease-in-out
       animation: scaleout 1.0s infinite ease-in-out
