Spike: Account Transactions

--- a/app/templates/accounts/index.hbs
+++ b/app/templates/accounts/index.hbs
@@ -11,7 +11,7 @@
   </thead>
   <tbody>
     {{#each account in this}}
-      {{#link-to "accounts.show" account tagName="tr"}}
+      {{#link-to "accounts.transactions" account tagName="tr"}}
         <td class="account-info">
           <div class="label">
             {{unbound account.label}}
