More work on Transactions listing.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -2,8 +2,10 @@
 
 @import "support/data"
 @import "support/keyframes"
+@import "support/content-table"
 @import "components/fmt-dollars"
 @import "views/application"
 @import "views/sidebar"
 @import "views/index"
-@import "views/accounts/index"
+@import "views/accounts"
+@import "views/account"
