--- a/app/styles/components/fmt-dollars.sass
+++ b/app/styles/components/fmt-dollars.sass
@@ -1,8 +1,13 @@
 .fmt-dollars
   position: relative
+  color: #111
 
   .symbol
     margin-right: 1px
+    color: #555
+
+  .sep
+    color: #444
 
   &.neg
     color: $red
