--- a/app/templates/components/fmt-dollars.hbs
+++ b/app/templates/components/fmt-dollars.hbs
@@ -1,7 +1,5 @@
 {{~#if sign~}}
-  {{~#if isNegative~}}
-    <span class="sign">-</span>
-  {{~/if~}}
+  <span class="sign">{{unbound sign}}</span>
 {{~/if~}}
 <span class="symbol">
   {{~unbound symbol~}}
