--- a/app/styles/support/keyframes.sass
+++ b/app/styles/support/keyframes.sass
@@ -1,15 +1,7 @@
-@-webkit-keyframes scaleout
-  0%
-    -webkit-transform: scale(0.0)
-  100%
-    -webkit-transform: scale(1.0)
-    opacity: 0
++keyframes(scaleout)
+  from
+    +transform(scale(0.0))
 
-@keyframes scaleout
-  0%
-    transform: scale(0.0)
-    -webkit-transform: scale(0.0)
-  100%
-    transform: scale(1.0)
-    -webkit-transform: scale(1.0)
+  to
+    +transform(scale(1.0))
     opacity: 0
