More work on transactions, now showing thumbnail.
Also demonstrates itemController.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -4,8 +4,9 @@
 @import "support/keyframes"
 @import "support/content-table"
 @import "components/fmt-dollars"
-@import "views/application"
-@import "views/sidebar"
-@import "views/index"
-@import "views/accounts"
-@import "views/account"
+@import "templates/loading"
+@import "templates/application"
+@import "templates/sidebar"
+@import "templates/index"
+@import "templates/accounts"
+@import "templates/account"
