--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,3 +1,4 @@
-<h1>Loading&hellip;</h1>
-
-<div class="loading-indicator"></div>
+<div class="loading-cover">
+  <h1>Loading&hellip;</h1>
+  <div class="loading-indicator"></div>
+</div>
