--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -4,6 +4,7 @@
 @import "support/keyframes"
 @import "support/content-table"
 @import "components/fmt-dollars"
+@import "components/ui-overlay"
 @import "templates/loading"
 @import "templates/application"
 @import "templates/sidebar"
