--- a/app/styles/support/keyframes.sass
+++ b/app/styles/support/keyframes.sass
@@ -1,7 +1,21 @@
-+keyframes(scaleout)
++keyframes(scale-out)
   from
     +transform(scale(0.0))
 
   to
     +transform(scale(1.0))
+    opacity: 0
+
++keyframes(fade-in)
+  from
+    opacity: 0
+
+  to
+    opacity: 1
+
++keyframes(fade-out)
+  from
+    opacity: 1
+
+  to
     opacity: 0
