--- a/app/styles/templates/application.sass
+++ b/app/styles/templates/application.sass
@@ -5,6 +5,7 @@ body, html
 
 body
   background: #eee
+
   &.loading
     &:after
       z-index: 99999
@@ -17,6 +18,7 @@ body
       content: ""
       opacity: 1
       +transition(opacity ease-out 300ms)
+
     &:before
       position: fixed
       color: $banco-orange
@@ -31,11 +33,12 @@ body
       margin: auto
       background-color: $banco-orange
       border-radius: 100%
-      -webkit-animation: scaleout 1.0s infinite ease-in-out
-      animation: scaleout 1.0s infinite ease-in-out
+      +animation(scale-out 1s infinite ease-in-out)
+
     &.reveal
       &:after
         opacity: 0
+
       &:before
         display: none
 
