--- a/app/templates/account/transactions/image.hbs
+++ b/app/templates/account/transactions/image.hbs
@@ -1,3 +1,3 @@
-{{#ui-overlay close="closeOverlay"}}
+{{#ui-overlay class="account-transaction-image" close="close"}}
   <img width="640" {{bind-attr src=imageUrl}}>
 {{/ui-overlay}}
