--- a/app/styles/templates/accounts.sass
+++ b/app/styles/templates/accounts.sass
@@ -6,7 +6,7 @@ table.accounts
     cursor: pointer
 
     td
-      +transition(background-color ease-in-out 200ms)
+      +transition(background-color ease-in-out $transition-duration)
 
     &:hover td
       background-color: #fffeef
