--- a/app/styles/templates/application.sass
+++ b/app/styles/templates/application.sass
@@ -17,7 +17,7 @@ body
       background: white
       content: ""
       opacity: 1
-      +transition(opacity ease-out 300ms)
+      +transition(opacity ease-out $transition-duration)
 
     &:before
       position: fixed
