--- a/app/styles/templates/sidebar.sass
+++ b/app/styles/templates/sidebar.sass
@@ -20,7 +20,7 @@
         color: rgba(white, 0.9)
         text-decoration: none
         font-size: 18px
-        +transition(background-color ease-in 0.2s)
+        +transition(background-color ease-in $transition-duration)
 
       &.active a
         color: white
