--- a/app/styles/templates/application.sass
+++ b/app/styles/templates/application.sass
@@ -120,3 +120,5 @@ body > div
     padding: 0 6px
     text-align: right
     color: rgba(black, 0.3)
+    span
+      background: rgba(white, 0.65)
