--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,7 +20,7 @@
 </main>
 
 <footer>
-  Banco Financial Group Website &copy; {{unbound year}}
+  <span>Banco Financial Group Website &copy; {{unbound year}}</span>
 </footer>
 
 {{outlet "overlay"}}
