--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -6,13 +6,8 @@
     <li {{bind-attr class="inAccounts:active"}}>
       {{#link-to "accounts"}}Accounts{{/link-to}}
     </li>
-    {{!--
-    <li>
-      {{#link-to "loans"}}Loans{{/link-to}}
+    <li {{bind-attr class="inTransfers:active"}}>
+      {{#link-to "transfers"}}Transfers{{/link-to}}
     </li>
-    <li>
-      {{#link-to "investments"}}Investments{{/link-to}}
-    </li>
-    --}}
   </ul>
 </nav>
