WIP: New transfers.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -5,9 +5,11 @@
 @import "support/content-table"
 @import "components/fmt-dollars"
 @import "components/ui-overlay"
+@import "components/ui-form"
 @import "templates/loading"
 @import "templates/application"
 @import "templates/sidebar"
 @import "templates/index"
 @import "templates/accounts"
 @import "templates/account"
+@import "templates/transfers"
