--- a/app/styles/support/data.sass
+++ b/app/styles/support/data.sass
@@ -4,5 +4,6 @@ $gutter: 30px
 $header-height: 68px
 $red: #dd2a2a
 $green: #40803f
+$blue: #46a3d1
 $sidebar-width: 222px
 $transition-duration: 250ms
