--- a/app/styles/templates/application.sass
+++ b/app/styles/templates/application.sass
@@ -100,6 +100,7 @@ body > div
     margin-left: $sidebar-width
 
     > header
+      position: relative
       height: $header-height
       line-height: $header-height - 4px
       padding: 0 $gutter
@@ -109,6 +110,37 @@ body > div
       h1
         font-weight: 400
         font-size: 24px
+
+      nav
+        position: absolute
+        right: $gutter
+        top: 2px
+
+        ul, li
+          list-style: none
+          margin: 0
+          padding: 0
+
+        a
+          text-decoration: none
+          display: inline-block
+          background: rgba(white, 0.75)
+          height: 33px
+          line-height: 31px
+          padding: 0 $gutter / 2
+          border: 2px solid lighten($blue, 10%)
+          border-radius: 5px
+          color: desaturate($blue, 5%)
+
+          &:hover
+            color: darken(desaturate($blue, 5%), 5%)
+            border-color: $blue
+            background-color: rgba(white, 0.85)
+
+          &:active
+            border-color: $blue
+            background-color: $blue
+            color: white
 
   > footer
     position: fixed
@@ -120,5 +152,6 @@ body > div
     padding: 0 6px
     text-align: right
     color: rgba(black, 0.3)
+
     span
       background: rgba(white, 0.65)
