--- a/app/templates/transfers/new.hbs
+++ b/app/templates/transfers/new.hbs
@@ -35,4 +35,8 @@
       {{~ui-dollar-input cents=model.amountInCents id="transfer-amount"}}
     </span>
   {{/ui-form-field}}
+
+  <fieldset>
+    <button type="submit">Transfer Funds</button>
+  </fieldset>
 {{/ui-form}}
