--- a/app/templates/components/ui-form-field.hbs
+++ b/app/templates/components/ui-form-field.hbs
@@ -6,10 +6,11 @@
   </label>
 
   {{input type=type value=value id=fieldGuid class="ui-form-control"}}
+{{/if}}
 
-  {{errors}}
+<b>Hi: {{errors.length}}<b>
+<b>Val: {{value}}</b>
 
-  {{#if isInvalid}}
-    <em class="ui-form-error">{{errors.firstObject.message}}</em>
-  {{/if}}
+{{#if isInvalid}}
+  <em class="ui-form-error">{{errors.firstObject.message}}</em>
 {{/if}}
