--- a/app/templates/components/ui-form-field.hbs
+++ b/app/templates/components/ui-form-field.hbs
@@ -8,7 +8,7 @@
   {{input type=type value=value id=fieldGuid class="ui-form-control"}}
 {{/if}}
 
-<b>Hi: {{errors.length}}<b>
+<b>Hi: {{errors.length}}</b>
 <b>Val: {{value}}</b>
 
 {{#if isInvalid}}
