--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -1,7 +1,7 @@
 <nav class="sidebar" role="navigation">
   <ul>
-    <li {{bind-attr class="inOverview:active"}}>
-      {{#link-to "index"}}Overview{{/link-to}}
+    <li {{bind-attr class="inWelcome:active"}}>
+      {{#link-to "index"}}Welcome{{/link-to}}
     </li>
     <li {{bind-attr class="inAccounts:active"}}>
       {{#link-to "accounts"}}Accounts{{/link-to}}
