--- a/app/templates/components/ui-form-field.hbs
+++ b/app/templates/components/ui-form-field.hbs
@@ -5,12 +5,32 @@
     {{label}}
   </label>
 
-  {{input type=type value=value id=fieldGuid class="ui-form-control"}}
+  {{#if isSelect}}
+    {{fast-select
+      items=items
+      class="ui-form-control"
+      id=fieldGuid
+      labelPath=labelPath
+      valuePath=valuePath
+      selected=selected}}
+  {{/if}}
+
+  {{#if isTextArea}}
+    {{textarea value=value id=fieldGuid class="ui-form-control"}}
+  {{/if}}
+
+  {{#if isDollars}}
+    <span class="ui-form-control">
+      <span class="symbol">$</span>
+      {{~ui-dollar-input cents=value id=fieldGuid}}
+    </span>
+  {{/if}}
+
+  {{#if isInput}}
+    {{input type=type value=value id=fieldGuid class="ui-form-control"}}
+  {{/if}}
 {{/if}}
 
-<b>Hi: {{errors.length}}</b>
-<b>Val: {{value}}</b>
-
 {{#if isInvalid}}
-  <em class="ui-form-error">{{errors.firstObject.message}}</em>
+  <em class="ui-form-error"><span>{{errors.firstObject.message}}</span></em>
 {{/if}}
