--- a/app/templates/transfers/new.hbs
+++ b/app/templates/transfers/new.hbs
@@ -3,40 +3,34 @@
 </header>
 
 {{#ui-form model=model action="submit"}}
-  {{#ui-form-field for="payee"}}
-    <label for="transfer-payee">To Payee</label>
+  {{ui-form-field for="payee"
+    type="select"
+    items=payees
+    labelPath="detail"
+    valuePath="id"
+    selected=payee}}
 
-    {{fast-select
-      items=payees
-      id="transfer-payee"
-      class="ui-form-control"
-      labelPath="label"
-      valuePath="id"
-      selected=model.payee}}
-  {{/ui-form-field}}
+  {{ui-form-field for="account"
+    type="select"
+    items=accounts
+    labelPath="detail"
+    valuePath="id"
+    selected=account}}
 
-  {{#ui-form-field for="account"}}
-    <label for="transfer-account">From Account</label>
+  {{ui-form-field for="amountInCents"
+    type="dollars"
+    label="Amount"}}
 
-    {{fast-select
-      items=accounts
-      id="transfer-account"
-      class="ui-form-control"
-      labelPath="label"
-      valuePath="id"
-      selected=model.account}}
-  {{/ui-form-field}}
+  Hi: {{payee.type}}
+  OK: {{payee.isIET}}
 
-  {{#ui-form-field for="amountInCents"}}
-    <label for="transfer-amount">Amount</label>
-
-    <span class="ui-form-control">
-      <span class="symbol">$</span>
-      {{~ui-dollar-input cents=model.amountInCents id="transfer-amount"}}
-    </span>
-  {{/ui-form-field}}
+  {{#if payee.isIET}}
+    {{ui-form-field for="message" type="textarea"}}
+  {{/if}}
 
   <fieldset>
     <button type="submit">Transfer Funds</button>
+    or
+    {{#link-to "transfers"}}Cancel{{/link-to}}
   </fieldset>
 {{/ui-form}}
