Use a local copy of fonts.
This ensures that the app runs without an internet connection.

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,5 +1,6 @@
 @import "../../vendor/bourbon/app/assets/stylesheets/bourbon"
 
+@import "support/fonts"
 @import "support/data"
 @import "support/keyframes"
 @import "support/content-table"
