add custom test helper and tests for transfers route

--- a/app/templates/transfers/index.hbs
+++ b/app/templates/transfers/index.hbs
@@ -3,7 +3,7 @@
   <nav>
     <ul>
       <li>
-        {{#link-to "transfers.new"}}
+        {{#link-to "transfers.new" class="new-transfer" }}
           Pay Bills &amp; Transfer Funds
         {{/link-to}}
       </li>
