--- a/app/templates/account/transactions.hbs
+++ b/app/templates/account/transactions.hbs
@@ -1,5 +1,5 @@
 <header class="account-header">
-  <h1>{{unbound account.label}}</h1>
+  <h1>{{unbound account.label}} #{{unbound account.number}}</h1>
   <h2>
     <span class="plan">
       <span class="label">Plan:</span>
