--- a/app/templates/accounts.hbs
+++ b/app/templates/accounts.hbs
@@ -24,6 +24,9 @@
             {{unbound account.label}}
           </div>
           <div class="details">
+            <span class="number">
+              {{unbound account.number}}
+            </span>
             <span class="type">
               {{unbound account.description}}
             </span>
