--- a/app/styles/support/data.sass
+++ b/app/styles/support/data.sass
@@ -1,9 +1,12 @@
 $banco-dark-orange: #402d28
 $banco-orange: #e0461c
-$gutter: 30px
-$header-height: 68px
 $red: #dd2a2a
 $green: #40803f
 $blue: #46a3d1
+$cell-hover-yellow: #fffeef
+
 $sidebar-width: 222px
+$gutter: 30px
+$header-height: 68px
+
 $transition-duration: 250ms
